--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<H1>Hey
-    
-</H1>
+<!DOCTYPE html>
+<head>
+    <title>Coin Flip Game</title>
+</head>
+<body>
+    <script src="abc.js"></script>
+</body>
+</html>
