--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Coin Flip Game</title>
+    <h1>Coin Flip Game</h1>
 </head>
 <body>
     <script src="abc.js"></script>
